--- a/housing.html
+++ b/housing.html
@@ -7,35 +7,43 @@
 </head>
 <body>
 <style>
-h1{
+	h1{
   text-align: center;
    top: 100px;
    left: 50px;
 }
  body{
-background: white;
+	 background: white;
  }
   p{
-text-align: left;
-font-size: 12px;
-}
-.p5{
-text-align: center;
-font-size: 20px;
-}
-.p6{
-text-align: center;
-font-size: 20px;
-}
+		text-align: left;
+		font-size: 12px;
+	}
+	.fhbtn{
+		text-align: center;
+		
+	}
+	.p6{
+		text-align: center;
+		font-size: 20px;
+	}
 </style>
+<script type="text/javascript">
+	function callFairHousingFormPage()
+	{
+		window.location.href = "housingform.html";
+	}
+	</script>
+
 <h1>Fair Housing</h1>
-<p id = "p1"> The Fair Housing Department’s mission is to combat housing discrimination in Maryland using a number of approaches, including investigation, advocacy, and community education. </p>
-<p id = "p2"> If you are a Maryland resident and you have a question about fair housing, or you suspect you have been discriminated against in any aspect of home seeking on the basis of your race, color, national origin, religion, sex, familial status, disability, marital status, sexual orientation, gender identity, or another characteristic protected in your locality, proceed to the form below to submit a Fair Housing Inquiry to one of our specialists.
+<p id = "p1"> 	The Fair Housing Departmentâ€™s mission is to combat housing discrimination in Maryland using a number of approaches, including investigation, advocacy, and community education. </p>
+<p id = "p2"> 	If you are a Maryland resident and you have a question about fair housing, or you suspect you have been discriminated against in any aspect of home seeking on the basis of your race, color, national origin, religion, sex, familial status, disability, marital status, sexual orientation, gender identity, or another characteristic protected in your locality, proceed to the form below to submit a Fair Housing Inquiry to one of our specialists.
 </p>
-<p id = "p3"> You may also call (410) 243-4400 to speak with one of our specialists during operating hours, M-F 9a-5p.</p>
-<p class = "p5"> Submit a Fair Housing Inquiry</p>
+<p id = "p3"> 	You may also call (410) 243-4400 to speak with one of our specialists during operating hours, M-F 9a-5p.</p>
+<div class="fhbtn">
+<button onclick="callFairHousingFormPage()" class="fhbtn">Submit a Fair Housing Inquiry</button>
+</div>
 <p class = "p6"> Have a tenant or landlord issue that is not related to discrimination? Check out our Tenant-Landlord Department!</p>
 
-</body>
+	</body>
 </html>
-
